# wp360-codesys-ftp

./: Cargo.toml  Makefile  env
.cargo/: config.toml
debian/: README.Debian  changelog  control  copyright  gbp.conf  service
src/: commands  commands2  ftp.rs  main.rs
