[package]
name = "wp360-codesys-bridge-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
suppaftp = { version = "8.0.1", features = ["native-tls", "rustls-ring"] }
webpki-roots = "1.0.5"

wasip2 = "=1.0.1"
windows-core = "=0.62.1"
windows-result = "=0.4.0"
windows-strings = "=0.5.0"
wit-bindgen = "=0.49.0"
