[package]
name = "wp360-codesys-ftp"
version = "0.1.0"
edition = "2024"
rust-edition = "1.85.0"

[dependencies]
suppaftp = { version = "8.0.1", features = ["native-tls", "rustls-ring"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.8.2"
env_logger = "0.11.9"
webpki-roots = "1.0.6"
