[package]
name = "wp360-codesys-ftp"
authors = ["OVERDIGIT <info@overdigit.com>"]
description = "A FTP external client daemon for CODESYS."
version = "0.2.1"
edition = "2024"

[dependencies]
suppaftp = { version = "8.0.1", features = ["native-tls", "rustls-ring"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.8.2"
env_logger = "0.11.9"
webpki-roots = "1.0.6"
inotify = "0.11.1"

[package.metadata.deb]
maintainer-scripts = "debian/"
section = "misc"
systemd-units = { }
extended-description = """\
A FTP client, using XML messages via Unix Domain Sockets as its interface.\
Meant for use on OVERDIGIT WP360 PLC devices via the OVERDIGIT WP360 CODESYS library."""
